[workspace.package]
license = "MIT-0"
authors = ["Minerva & Gemini (The Architect)"]
homepage = "https://tesserax.network"
repository = "https://github.com/tesserax-protocol/tesserax-node.git"
edition = "2021"
description = "Tesserax Protocol - Adaptive Scarcity & Quantum-Resistant Blockchain"

[workspace]
members = [
    "node",
    "pallets/template",
    "pallets/emission",
    "pallets/quantum-vault",
    "pallets/reml-verifier",
    "runtime",
]
resolver = "2"

[workspace.dependencies]
# ═══════════════════════════════════════════════════════════════════════════
# LOCAL CRATES
# ═══════════════════════════════════════════════════════════════════════════
tesserax-runtime = { path = "./runtime", default-features = false }
pallet-template = { path = "./pallets/template", default-features = false }
pallet-emission = { path = "./pallets/emission", default-features = false }
pallet-quantum-vault = { path = "./pallets/quantum-vault", default-features = false }
pallet-reml-verifier = { path = "./pallets/reml-verifier", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

# ═══════════════════════════════════════════════════════════════════════════
# POLKADOT SDK (stable2506)
# https://github.com/paritytech/polkadot-sdk
# Commit: dc937dd74221e38ce4c184be27b6cdcf36de0452
# ═══════════════════════════════════════════════════════════════════════════
# Substrate Client
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506" }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506" }

# Substrate Primitives
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506" }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }

# Substrate FRAME
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506" }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }

# Substrate Pallets
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506", default-features = false }

# Substrate Utilities
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506" }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506" }

# Cumulus (for host functions)
cumulus-primitives-proof-size-hostfunction = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506" }

# ═══════════════════════════════════════════════════════════════════════════
# FRONTIER (EVM Compatibility Layer)
# https://github.com/polkadot-evm/frontier
# Commit: 7cdf7fd1f7ad5f866014ea7dfe2b063be4d08bd3
# ═══════════════════════════════════════════════════════════════════════════
# Frontier Pallets
pallet-evm = { git = "https://github.com/polkadot-evm/frontier", rev = "7cdf7fd1f7ad5f866014ea7dfe2b063be4d08bd3", default-features = false }
pallet-ethereum = { git = "https://github.com/polkadot-evm/frontier", rev = "7cdf7fd1f7ad5f866014ea7dfe2b063be4d08bd3", default-features = false }
pallet-base-fee = { git = "https://github.com/polkadot-evm/frontier", rev = "7cdf7fd1f7ad5f866014ea7dfe2b063be4d08bd3", default-features = false }
pallet-dynamic-fee = { git = "https://github.com/polkadot-evm/frontier", rev = "7cdf7fd1f7ad5f866014ea7dfe2b063be4d08bd3", default-features = false }
pallet-evm-chain-id = { git = "https://github.com/polkadot-evm/frontier", rev = "7cdf7fd1f7ad5f866014ea7dfe2b063be4d08bd3", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/polkadot-evm/frontier", rev = "7cdf7fd1f7ad5f866014ea7dfe2b063be4d08bd3", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/polkadot-evm/frontier", rev = "7cdf7fd1f7ad5f866014ea7dfe2b063be4d08bd3", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/polkadot-evm/frontier", rev = "7cdf7fd1f7ad5f866014ea7dfe2b063be4d08bd3", default-features = false }

# Frontier Primitives
fp-account = { git = "https://github.com/polkadot-evm/frontier", rev = "7cdf7fd1f7ad5f866014ea7dfe2b063be4d08bd3", default-features = false }
fp-evm = { git = "https://github.com/polkadot-evm/frontier", rev = "7cdf7fd1f7ad5f866014ea7dfe2b063be4d08bd3", default-features = false }
fp-rpc = { git = "https://github.com/polkadot-evm/frontier", rev = "7cdf7fd1f7ad5f866014ea7dfe2b063be4d08bd3", default-features = false }
fp-self-contained = { git = "https://github.com/polkadot-evm/frontier", rev = "7cdf7fd1f7ad5f866014ea7dfe2b063be4d08bd3", default-features = false }

# Frontier Client (for node RPC)
fc-api = { git = "https://github.com/polkadot-evm/frontier", rev = "7cdf7fd1f7ad5f866014ea7dfe2b063be4d08bd3" }
fc-consensus = { git = "https://github.com/polkadot-evm/frontier", rev = "7cdf7fd1f7ad5f866014ea7dfe2b063be4d08bd3" }
fc-db = { git = "https://github.com/polkadot-evm/frontier", rev = "7cdf7fd1f7ad5f866014ea7dfe2b063be4d08bd3" }
fc-mapping-sync = { git = "https://github.com/polkadot-evm/frontier", rev = "7cdf7fd1f7ad5f866014ea7dfe2b063be4d08bd3" }
fc-rpc = { git = "https://github.com/polkadot-evm/frontier", rev = "7cdf7fd1f7ad5f866014ea7dfe2b063be4d08bd3" }
fc-rpc-core = { git = "https://github.com/polkadot-evm/frontier", rev = "7cdf7fd1f7ad5f866014ea7dfe2b063be4d08bd3" }
fc-storage = { git = "https://github.com/polkadot-evm/frontier", rev = "7cdf7fd1f7ad5f866014ea7dfe2b063be4d08bd3" }

# ═══════════════════════════════════════════════════════════════════════════
# COMMON DEPENDENCIES
# ═══════════════════════════════════════════════════════════════════════════
clap = { version = "4.5" }
futures = { version = "0.3.31" }
jsonrpsee = { version = "0.24" }
log = { version = "0.4", default-features = false }
codec = { version = "3.7", default-features = false, package = "parity-scale-codec" }
scale-info = { version = "2.11", default-features = false }
serde_json = { version = "1.0", default-features = false }
hex-literal = { version = "0.4" }
ethereum = { version = "0.18", default-features = false }

# Post-Quantum Cryptography
pqc_dilithium = { version = "0.2", default-features = false, features = ["mode2"] }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
