# Re-ML: Recursive-STARK ML-DSA for Tesserax Protocol
# 
# Workspace for Zero-Knowledge proof system that compresses ML-DSA signatures
# using SP1 zkVM (Succinct Prover 1)

[workspace]
resolver = "2"
members = [
    "lib",
    "guest",
    "host",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/tesserax/tesserax-node"
authors = ["Tesserax Protocol Team"]

[workspace.dependencies]
# SP1 zkVM dependencies
sp1-build = "4.1"
sp1-sdk = "4.1"
sp1-zkvm = "4.1"
sp1-primitives = "4.1"
sp1-helper = "4.1"

# Cryptography
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
sha3 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
hex = "0.4"

# Internal crate
reml-lib = { path = "lib" }
