[package]
name = "sanctuary-runtime"
description = "Sanctuary Protocol Runtime - Adaptive Scarcity & EVM Compatible"
version = "0.1.0"
license = "MIT-0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Core
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive", "serde"], workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
log.workspace = true
hex-literal.workspace = true

# Substrate Primitives
sp-api.workspace = true
sp-block-builder.workspace = true
sp-consensus-aura = { features = ["serde"], workspace = true }
sp-consensus-grandpa = { features = ["serde"], workspace = true }
sp-core = { features = ["serde"], workspace = true }
sp-genesis-builder.workspace = true
sp-inherents.workspace = true
sp-keyring.workspace = true
sp-offchain.workspace = true
sp-runtime = { features = ["serde"], workspace = true }
sp-session.workspace = true
sp-storage.workspace = true
sp-transaction-pool.workspace = true
sp-version = { features = ["serde"], workspace = true }

# FRAME
frame-benchmarking = { optional = true, workspace = true }
frame-executive.workspace = true
frame-metadata-hash-extension.workspace = true
frame-support = { features = ["experimental"], workspace = true }
frame-system-benchmarking = { optional = true, workspace = true }
frame-system-rpc-runtime-api.workspace = true
frame-system.workspace = true
frame-try-runtime = { optional = true, workspace = true }

# Substrate Pallets
pallet-aura.workspace = true
pallet-authorship.workspace = true
pallet-balances.workspace = true
pallet-grandpa.workspace = true
pallet-sudo.workspace = true
pallet-timestamp.workspace = true
pallet-transaction-payment-rpc-runtime-api.workspace = true
pallet-transaction-payment.workspace = true

# Custom Pallets
pallet-template.workspace = true
pallet-emission.workspace = true

# ═══════════════════════════════════════════════════════════════════════════
# FRONTIER EVM
# ═══════════════════════════════════════════════════════════════════════════
# Pallets
pallet-evm.workspace = true
pallet-ethereum.workspace = true
pallet-base-fee.workspace = true
pallet-dynamic-fee.workspace = true
pallet-evm-chain-id.workspace = true
pallet-evm-precompile-simple.workspace = true
pallet-evm-precompile-modexp.workspace = true
pallet-evm-precompile-sha3fips.workspace = true

# Primitives
fp-account = { features = ["serde"], workspace = true }
fp-evm = { features = ["serde"], workspace = true }
fp-rpc.workspace = true
fp-self-contained = { features = ["serde"], workspace = true }

# Dependencies for EVM
ethereum.workspace = true

[build-dependencies]
substrate-wasm-builder = { optional = true, workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde_json/std",
	"log/std",
	"ethereum/std",
	# Substrate Primitives
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-keyring/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	# FRAME
	"frame-benchmarking?/std",
	"frame-executive/std",
	"frame-metadata-hash-extension/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime?/std",
	# Substrate Pallets
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	# Custom Pallets
	"pallet-template/std",
	"pallet-emission/std",
	# Frontier EVM
	"pallet-evm/std",
	"pallet-ethereum/std",
	"pallet-base-fee/std",
	"pallet-dynamic-fee/std",
	"pallet-evm-chain-id/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-modexp/std",
	"pallet-evm-precompile-sha3fips/std",
	"fp-account/std",
	"fp-evm/std",
	"fp-rpc/std",
	"fp-self-contained/std",
	# Build
	"substrate-wasm-builder",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-template/runtime-benchmarks",
	"pallet-emission/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
	"pallet-ethereum/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-template/try-runtime",
	"pallet-emission/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-evm/try-runtime",
	"pallet-ethereum/try-runtime",
	"pallet-base-fee/try-runtime",
	"pallet-dynamic-fee/try-runtime",
	"pallet-evm-chain-id/try-runtime",
	"sp-runtime/try-runtime",
]

metadata-hash = ["substrate-wasm-builder/metadata-hash"]
on-chain-release-build = ["metadata-hash", "sp-api/disable-logging"]
