[package]
name = "pallet-quantum-vault"
version = "0.1.0"
description = "Tesserax Quantum Vault - Post-Quantum Cryptographic Cold Storage"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Substrate
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
log = { workspace = true }
hex = { workspace = true }

# Post-Quantum Cryptography (CRYSTALS-Dilithium Level 2)
# Only included in std builds due to getrandom dependency issues in WASM
pqc_dilithium = { workspace = true, optional = true }

# Token operations
pallet-balances = { workspace = true }

# Re-ML verification integration
pallet-reml-verifier = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-io/std",
    "pallet-balances/std",
    "pallet-reml-verifier/std",
    "log/std",
    "hex/std",
    # Enable pqc_dilithium only in std mode
    "pqc_dilithium",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "sp-runtime/try-runtime",
]
