[package]
name = "reml-host"
description = "Re-ML Host/Prover - Generates STARK proofs for ML-DSA signature batches"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "reml-prover"
path = "src/main.rs"

[dependencies]
# SP1 SDK for proof generation
sp1-sdk = { workspace = true }
sp1-build = { workspace = true }

# Shared types with full crypto support
reml-lib = { workspace = true, features = ["full-crypto"] }

# Cryptography for generating test signatures
pqcrypto-dilithium = { workspace = true }
pqcrypto-traits = { workspace = true }
sha3 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"
bincode = { workspace = true }
hex = { workspace = true }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# CLI and logging
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[build-dependencies]
sp1-build = { workspace = true }
